; ModuleID = '/home/carl/AnghaBench/git/t/helper/extr_test-run-command.c_test_finished.c'
source_filename = "/home/carl/AnghaBench/git/t/helper/extr_test-run-command.c_test_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.testsuite = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"%s: '%s'\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"FAIL\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"SUCCESS\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.strbuf*, i8*, i8*)* @test_finished to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_finished(i32 %0, %struct.strbuf* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.testsuite*, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.strbuf* %1, %struct.strbuf** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to %struct.testsuite*
  store %struct.testsuite* %12, %struct.testsuite** %9, align 8
  %13 = load i8*, i8** %8, align 8
  store i8* %13, i8** %10, align 8
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %4
  %17 = load %struct.testsuite*, %struct.testsuite** %9, align 8
  %18 = getelementptr inbounds %struct.testsuite, %struct.testsuite* %17, i32 0, i32 0
  %19 = load i8*, i8** %10, align 8
  %20 = call i32 @string_list_append(i32* %18, i8* %19)
  br label %21

21:                                               ; preds = %16, %4
  %22 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0)
  %27 = load i8*, i8** %10, align 8
  %28 = call i32 @strbuf_addf(%struct.strbuf* %22, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %26, i8* %27)
  ret i32 0
}

declare dso_local i32 @string_list_append(i32*, i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
